--- a/blood4life-web/src/main/webapp/views/home.html
+++ b/blood4life-web/src/main/webapp/views/home.html
@@ -1,34 +1,32 @@
-<div class="container-fluid">
+<div class="container">
 
-    <!-- Example row of columns -->
-   <div class="row">
-        <div class="span4">
-            <h2>Heading</h2>
+    <div class="row span10 well">
+        <h2>Spread the world !</h2>
 
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+            euismod. Donec sed odio dui. </p>
 
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-            <h2>Heading</h2>
+        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
 
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
+    </div>
+    <div class="row span10 well">
+        <h2>Heading</h2>
 
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-            <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+            euismod. Donec sed odio dui. </p>
 
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+    </div>
+    <div class="row span10 well">
+        <h2>Heading</h2>
 
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-        </div>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
+            porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+            fermentum massa justo sit amet risus.</p>
+
+        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
     </div>
 
 </div>
