--- a/blood4life-web/src/main/webapp/views/home.html
+++ b/blood4life-web/src/main/webapp/views/home.html
@@ -1,13 +1,11 @@
 <div class="container">
 
     <div class="row span10 well">
-        <h2>Spread the world !</h2>
+        <h2>Spread the word !</h2>
 
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-            euismod. Donec sed odio dui. </p>
-
-        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+        <p>
+            <a href="/login">Facebook</a>
+        </p>
 
     </div>
     <div class="row span10 well">
