--- a/blood4life-web/src/main/webapp/views/home.html
+++ b/blood4life-web/src/main/webapp/views/home.html
@@ -3,9 +3,15 @@
     <div class="row span10 well">
         <h2>Spread the word !</h2>
 
-        <p>
-            <a href="/login">Facebook</a>
-        </p>
+        <!--<a href="/login">-->
+        <!--<img src="/img/fb_share.png"/>-->
+        <!--</a>-->
+
+        <form id="fb_signin" action="/connect/facebook" method="POST">
+            <button type="submit">
+                <img src="/img/fb_share.png"/>
+            </button>
+        </form>
 
     </div>
     <div class="row span10 well">
