refactors the spring-social config (still not fully functional, but we're getting there !)

--- a/blood4life-web/src/main/webapp/views/home.html
+++ b/blood4life-web/src/main/webapp/views/home.html
@@ -7,7 +7,7 @@
         <!--<img src="/img/fb_share.png"/>-->
         <!--</a>-->
 
-        <form id="fb_signin" action="/connect/facebook" method="POST">
+        <form id="fb_signin" action="/signin/facebook" method="POST">
             <button type="submit">
                 <img src="/img/fb_share.png"/>
             </button>
