further testing spring social (still not working)

--- a/blood4life-web/src/main/webapp/styles/custom.less
+++ b/blood4life-web/src/main/webapp/styles/custom.less
@@ -1,15 +1,12 @@
 @import "less/bootstrap.less";
 @import "bootstrap-responsive.css";
 
-@well-bg: #ff0000;
+/*@well-bg: #ff0000;*/
+@well-bg: #000000;
 
 body {
   background: url("../img/background.jpg") no-repeat;
   background-size: cover;
-}
-
-well {
-
 }
 
 .footer {
@@ -27,10 +24,14 @@ well {
   padding: 0 20px !important;
 }
 
+.bloody {
+  color: #ff0000;
+}
+
 .mainContainer {
   .container;
   margin-top: 70px;
-  opacity: .7;
+  opacity: .8;
   color: white;
 }
 
